More alignment issues

--- a/s5-ui/pretty.css
+++ b/s5-ui/pretty.css
@@ -45,7 +45,7 @@ div.long {font-size: 0.75em;}
 .slide {
 	font-family: georgia, Times, 'Times New Roman', serif;
   background: transparent url(bluebg.gif) repeat-x;
-  width: 98%;
+  width: 96%;
 }
 .slide h1 {position: absolute; left: 87px; z-index: 1;
  white-space: nowrap;
